--- a/public/style.css
+++ b/public/style.css
@@ -455,6 +455,66 @@ nav {
 }
 
 /********************************************/
+/**************** MENU FORM *****************/
+/********************************************/
+.menu-form {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  background-color: rgb(0, 0, 0, 0.6);
+}
+
+.menu-form-container {
+  background-color: #fefefe;
+  padding: 30px 40px;
+  margin-right: 20%;
+  margin-bottom: 20%;
+  width: 500px;
+}
+
+.menu-form-container h3 {
+  margin-bottom: 15px;
+  font-weight: 900;
+}
+
+.menu-form-container div {
+  padding: 10px;
+}
+
+.menu-form-input input {
+  width: 145px;
+  padding: 4px;
+  float: right;
+  color: black;
+  border-radius: 4px;
+}
+
+.menu-form-submit {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.menu-form-submit button {
+  margin-top: 25px;
+  margin-left: 10px;
+  padding: 6px;
+  width: 80px;
+  color: #fefefe;
+  background-color: #ff9466;
+  box-shadow: 0 2px 8px rgba(192, 192, 192, 0.788);
+  border: none;
+  border-radius: 2px;
+}
+
+.menu-form-submit button:hover {
+  background-color: #ff8856;
+  cursor: pointer;
+}
+
+/********************************************/
 /****************** ORDERS ******************/
 /********************************************/
 .orders-container {
