fixed bullet issue with list, updated css

--- a/public/style.css
+++ b/public/style.css
@@ -64,10 +64,6 @@ nav {
   background-color: #ff9466;
 }
 
-.nav-links {
-  list-style: none;
-}
-
 .nav-links li {
   display: inline-block;
   margin-left: 15px;
@@ -546,28 +542,32 @@ nav {
 /********************************************/
 .picture-container {
   margin-top: 80px;
+  height: 70vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.picture {
+  height: 100%;
+  width: 100%;
   background: url(./images/Bar.jpg);
   filter: blur(2px);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  height: 70vh;
   background-attachment: fixed;
 }
 
 .text {
+  position: fixed;
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
   color: white;
   font-weight: bold;
   border: 3px solid #f1f1f1;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  z-index: 2;
   width: 80%;
-  height: 220px;
+  height: auto;
   padding: 20px;
   text-align: center;
   box-sizing: border-box;
@@ -584,7 +584,6 @@ nav {
   opacity: 0.6;
   transition: 0.3s;
   border-radius: 8px;
-  display: inline-block;
   text-decoration: none;
   cursor: pointer;
 }
@@ -593,18 +592,30 @@ nav {
   opacity: 1;
 }
 
-.business-text {
-  margin-top: 2px;
-  height: 100vh;
+.business-container {
+  display: flex;
   background-color: #f7f7f7;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 10%;
 }
 
-.business-list {
-  text-align: center;
-  list-style: circle;
-  display: block;
+.business-container div {
+  padding: 20px;
+}
+
+.business-info {
+  flex: 1;
 }
 
 .business-list li {
-  margin: 10px 0;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+
+.business-image {
+  flex: 1;
+  background-color: blue;
+  width: 100%;
+  height: 100%;
 }
