--- a/public/style.css
+++ b/public/style.css
@@ -546,6 +546,7 @@ nav {
   display: flex;
   justify-content: center;
   align-items: center;
+  border-bottom: 0.5px solid black;
 }
 
 .picture {
@@ -560,13 +561,14 @@ nav {
 }
 
 .text {
-  position: fixed;
+  position: absolute;
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
   color: white;
   font-weight: bold;
   border: 3px solid #f1f1f1;
   width: 80%;
+  max-width: 600px;
   height: auto;
   padding: 20px;
   text-align: center;
@@ -613,9 +615,18 @@ nav {
   margin-left: 20px;
 }
 
-.business-image {
+.business-image-container {
   flex: 1;
-  background-color: blue;
-  width: 100%;
-  height: 100%;
+  border-radius: 50%;
+}
+
+.business-image {
+  width: 350px;
+  height: 350px;
+  border-radius: 100%;
+  background: url(/public/images/guysDrinking.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  box-shadow: 0 5px 15px rgba(20, 20, 20, 0.788);
 }
