--- a/views/login.hbs
+++ b/views/login.hbs
@@ -14,7 +14,7 @@
     <div class="login-info-container"></div>
     <div class="login-input-container">
       <div class="login-input-title-container">
-        <h1>OpenTab</h1>
+        <h1><a href="/">OpenTab</a></h1>
       </div>
       <form action="/users/login" method="POST" class="login-form" id="loginForm">
         <div class="login-input">
