--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,12 +26,14 @@
 
   <div class="picture-container">
     <div class="picture"></div>
-    <div class="text">
-      <h1 style="font-size: 50px;">Shake it up and order up with OpenTab!</h1>
-      <p>Expand your business and boost sales!</p>
-      <button class="sign-up-button" type="button" onclick="window.location.href='/users/register'">
-        Start your tab today!
-      </button>
+    <div class="text-container">
+      <div class="text">
+        <h1 style="font-size: 50px;">Shake it up and order up with OpenTab!</h1>
+        <p>Expand your business and boost sales!</p>
+        <button class="sign-up-button" type="button" onclick="window.location.href='/users/register'">
+          Start your tab today!
+        </button>
+      </div>
     </div>
   </div>
 
