--- a/views/register.hbs
+++ b/views/register.hbs
@@ -21,9 +21,9 @@
           <input id="firstName" type="text" placeholder="First Name" name="firstName" required />
           <input id="lastName" type="text" placeholder="Last Name" name="lastName" required />
           <input id="restaurantName" type="text" placeholder="Restaurant Name" name="restaurantName" required />
-          <input id="email" type="email" placeholder="Business Email" name="email" />
-          <input id="phone" type="tel" placeholder="Business Phone" name="phone" required />
-          <input id="address" type="text" placeholder="Business Address" name="address" required />
+          <input id="email" type="email" placeholder="Email" name="email" />
+          <input id="phone" type="tel" placeholder="Phone" name="phone" required />
+          <input id="address" type="text" placeholder="Address" name="address" required />
           <input id="zipcode" type="number" placeholder="Zipcode" name="zipcode" required />
           <input id="state" type="text" placeholder="State" name="state" required />
           <input id="password" type="password" placeholder="Password" name="password" required />
