added page loaders for account, menu and invoice

--- a/views/account.hbs
+++ b/views/account.hbs
@@ -57,35 +57,7 @@
           <div class="section-title">
             <h2>Restaurant Information</h2>
           </div>
-          <div class="restaurant-info">
-            <div class="restaurant-name">
-              <h3>Patel's Best</h3>
-            </div>
-
-            <div class="restaurant-email">
-              <h4>Email:</h4>
-              <p>patelsbest@gmail.com</p>
-            </div>
-
-            <div class="restaurant-phone">
-              <h4>Phone:</h4>
-              <p>1-234-345-5322</p>
-            </div>
-
-            <div class="restaurant-location">
-              <h4>Address:</h4>
-              <p>550 Huntington Ave</p>
-              <p>Boston, MA 02115</p>
-            </div>
-
-            <div class="restaurant-desc">
-              <h4>Description:</h4>
-              <p>
-                Patel's Best is where you can find the finest indian food in
-                all of Boston.
-              </p>
-            </div>
-
+          <div id="restaurantInfo" class="restaurant-info">
             <div class="control-order">
               <h3>EDIT DESCRIPTION</h3>
             </div>
@@ -95,6 +67,8 @@
     </div>
   </div>
 
+  <script type="text/javascript" src="/publicHeader.js"></script>
+  <script type="text/javascript" src="/loaders/accountLoader.js"></script>
   <script src="/js/slide-nav.js"></script>
 </body>
 
