--- a/views/login.hbs
+++ b/views/login.hbs
@@ -22,7 +22,7 @@
           <p style="color: red;">{{message}}</p>
           {{/if}}
           <input id="email" type="email" placeholder="example@email.com" name="email" required />
-          <input id="password" type="password" placeholder="Password" name="password" required />
+          <input id="password" type="password" placeholder="Password" name="restPassword" required />
           <p><a href="#">Forgot Password?</a></p>
           <p><a href="/users/register">Don't have an account? Sign Up!</a></p>
         </div>
