--- a/views/invoice.hbs
+++ b/views/invoice.hbs
@@ -72,62 +72,16 @@
           <div class="section-title">
             <h2>Order History</h2>
           </div>
-          <div class="items-list">
-            <div class="invoice-item" onclick="openPopup()">
-              <div class="invoice-item-order-id">
-                <h3>Order#1234153</h3>
-              </div>
-              <div class="invoice-item-total">
-                <h5>Total: $10.89</h4>
-              </div>
-              <div class="invoice-item-date">
-                <h5>Date: 02-05-2020</h5>
-              </div>
-            </div>
-
-            <div class="invoice-item" onclick="openPopup()">
-              <div class="invoice-item-order-id">
-                <h3>Order#1234153</h3>
-              </div>
-              <div class="invoice-item-total">
-                <h5>Total: $10.89</h4>
-              </div>
-              <div class="invoice-item-date">
-                <h5>Date: 02-05-2020</h5>
-              </div>
-            </div>
-
-            <div class="invoice-item" onclick="openPopup()">
-              <div class="invoice-item-order-id">
-                <h3>Order#1234153</h3>
-              </div>
-              <div class="invoice-item-total">
-                <h5>Total: $10.89</h4>
-              </div>
-              <div class="invoice-item-date">
-                <h5>Date: 02-05-2020</h5>
-              </div>
-            </div>
-
-            <div class="invoice-item" onclick="openPopup()">
-              <div class="invoice-item-order-id">
-                <h3>Order#1234153</h3>
-              </div>
-              <div class="invoice-item-total">
-                <h5>Total: $10.89</h4>
-              </div>
-              <div class="invoice-item-date">
-                <h5>Date: 02-05-2020</h5>
-              </div>
-            </div>
-          </div>
+          <div id="invoiceList" class="items-list"></div>
         </div>
       </div>
     </div>
   </div>
 
+  <script type="text/javascript" src="/publicHeader.js"></script>
+  <script type="text/javascript" src="/js/invoice.js"></script>
+  <script type="text/javascript" src="/loaders/invoiceLoader.js"></script>
   <script src="/js/slide-nav.js"></script>
-  <script src="/js/invoice.js"></script>
 </body>
 
 </html>
