--- a/views/menu.hbs
+++ b/views/menu.hbs
@@ -58,8 +58,8 @@
           </div>
 
           <div class="menu-form-input">
-            <label><b>Cost</b></label>
-            <input id="item-cost-input" type="number" placeholder="0.00" name="itemPrice" required />
+            <label><b>Item Price</b></label>
+            <input id="item-cost-input" type="number" step="any" placeholder="0.00" name="itemPrice" required />
           </div>
 
           <div class="menu-form-input">
@@ -94,19 +94,22 @@
       <form action="/menu/update" method="POST" class="menu-form" id="editMenuItemForm">
         <div class="menu-form-container">
           <h3>Edit Menu Item</h3>
+          <div>
+            <input id="editItemID" name="itemID" style="display:none !important" required />
+          </div>
           <div class="menu-form-input">
             <label><b>Item Name</b></label>
-            <input id="item-name-input" type="text" placeholder="Item Name" name="itemName" required />
+            <input id="editItemName" type="text" placeholder="Item Name" name="itemName" required />
           </div>
 
           <div class="menu-form-input">
-            <label><b>Cost</b></label>
-            <input id="item-cost-input" type="number" placeholder="0.00" name="itemPrice" required />
+            <label><b>Item Price</b></label>
+            <input id="editItemPrice" type="number" step="any" placeholder="0.00" name="itemPrice" required />
           </div>
 
           <div class="menu-form-input">
             <label><b>Description</b></label>
-            <input id="item-desc-input" type="text" placeholder="Item Description" name="itemDesc"
+            <input id="editItemDesc" type="text" placeholder="Item Description" name="itemDescription"
               pattern="^\\$?(([1-9](\\d*|\\d{0,2}(,\\d{3})*))|0)(\\.\\d{1,2})?$" />
           </div>
 
@@ -153,15 +156,6 @@
           </div>
 
           <div id="foodList" class="items-list">
-            <div class="menu-item" onclick="openEditForm()">
-              <div class="item-name">
-                <h3>Fries</h3>
-              </div>
-              <div class="item-desc">
-                <h5>$4.00</h5>
-                <p>Cripsy thin cut fries w/ salt</p>
-              </div>
-            </div>
           </div>
         </div>
       </div>
