--- a/views/register.hbs
+++ b/views/register.hbs
@@ -24,8 +24,9 @@
           <input id="email" type="email" placeholder="Email" name="email" />
           <input id="phone" type="tel" placeholder="Phone" name="phone" required />
           <input id="address" type="text" placeholder="Address" name="address" required />
-          <input id="zipcode" type="number" placeholder="Zipcode" name="zipcode" required />
+          <input id="city" type="text" placeholder="City" name="city" />
           <input id="state" type="text" placeholder="State" name="state" required />
+          <input id="zipcode" type="number" placeholder="Zipcode" name="zipcode" required />
           <input id="password" type="password" placeholder="Password" name="restPassword" required />
           <input id="passwordConfirm" type="password" placeholder="Confirm Password" name="passwordConfirm" required />
           {{#if message}}
