--- a/public/style.css
+++ b/public/style.css
@@ -485,12 +485,29 @@ nav {
 }
 
 .menu-form-container h3 {
-  margin-bottom: 15px;
   font-weight: 900;
 }
 
 .menu-form-container div {
   padding: 10px;
+}
+
+.menu-form-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-bottom: black 2px solid;
+}
+
+.menu-form-header p {
+  padding: 5px 7px;
+  font-weight: bolder;
+}
+
+.menu-form-header p:hover {
+  color: #ffffff;
+  background-color: #ff9466;
+  cursor: pointer;
 }
 
 .menu-form-input select {
@@ -515,7 +532,6 @@ nav {
 
 .menu-form-submit button {
   margin-top: 25px;
-  margin-left: 10px;
   padding: 6px;
   width: 80px;
   color: #fefefe;
@@ -528,6 +544,10 @@ nav {
 .menu-form-submit button:hover {
   background-color: #ff8856;
   cursor: pointer;
+}
+
+.edit-item-submit {
+  margin-left: 10px;
 }
 
 /********************************************/
@@ -667,6 +687,20 @@ nav {
   box-shadow: 0 5px 15px rgba(20, 20, 20, 0.788);
 }
 
+.invoice-pop-header {
+  border-bottom: black 2px solid;
+  margin-bottom: 10px;
+}
+.popupItemPriceSpan {
+  float: right;
+}
+.popup-total {
+  margin-top: 5px;
+  height: 100%;
+  width: 100%;
+  text-align: right;
+}
+
 .invoice-popup-controls {
   height: 100%;
   display: flex;
@@ -736,6 +770,10 @@ nav {
 }
 
 .restaurant-location {
+  margin-left: 5px;
+}
+
+.restaurant-hours {
   margin-left: 5px;
 }
 
